Support cross-compilation
build.rs relies on output of llvm-config to figure out which libraries
to link. This is problematic when cross-compiling llvm-sys for an
another architecture, because in such case, provided LLVM artifacts
are built for that foreign architecture as well.

To allow cross builds, autodetect them in build.rs and try to run
llvm-config with an user-space emulator (e.g. `qemu-aarch64`). Correct
cross builds often require using a separate sysroot, which then would
be used as an `-L` argument to the emulator, e.g.

```
qemu-aarch64 -L /usr/aarch64-linux-gnu [...]
```

By default, build.rs tries to autodetect the emulator and LD path to
use, but the caller can provide custom ones, using
`LLVM_SYS_USER_SPACE_EMULATOR` and `LLVM_SYS_CROSS_LD_PREFIX` variables.

To make the `disassembler` compatible with non-x86_64 architectures,
use the `c_char` type instead of `i8` - the type used as `char` differs
across architectures.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ cc = "1.0"
 lazy_static = "1.0"
 regex-lite = "0.1.5"
 semver = "1.0.7"
+which = "6.0.3"
 
 [lints.rust]
 # LLVM_SYS_NOT_FOUND is set by build.rs if no LLVM library is located, which
