--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ keywords = ["bindings", "llvm"]
 categories = ["external-ffi-bindings"]
 links = "llvm-19"
 name = "llvm-sys"
-version = "191.0.0-rc1"
+version = "191.0.0"
 authors = ["Peter Marheine <peter@taricorp.net>"]
 build = "build.rs"
+edition = "2021"
 
 [badges]
 gitlab = { repository = "taricorp/llvm-sys.rs" }
@@ -43,15 +44,15 @@ force-static = []
 
 [dependencies]
 libc = "0.2"
-clang-sys = { version = "1.2.2", optional = true }
-tempfile = { version = "3.2.0", optional = true }
+clang-sys = { version = "1.8.1", optional = true }
+tempfile = { version = "3.12.0", optional = true }
 
 [build-dependencies]
 anyhow = "1.0"
 cc = "1.0"
 lazy_static = "1.0"
-regex-lite = "0.1.5"
-semver = "1.0.7"
+regex-lite = "0.1.6"
+semver = "1.0.23"
 
 [lints.rust]
 # LLVM_SYS_NOT_FOUND is set by build.rs if no LLVM library is located, which
